002_K8S_Cluster_Setup/portainer/IngressRoute_portainer.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`portainer.training.cplace.cloud`)
      services:
        - kind: Service
          name: portainer
          namespace: portainer
          port: 9000
